--- a/index.html
+++ b/index.html
@@ -20,15 +20,17 @@
         </div>
     </div>
     <div>
-        <div class="">
-            <input type="text" placeholder="Tìm kiếm sản phẩm" />
-            <button type="submit">Tìm kiếm</button>
+        <div class="header_user_info">
+            <ul>
+                <li><a href="">Đăng nhập</a></li>
+                <li><a href="">Trang chủ</a></li>
+                <li><a href="">Giới thiệu</a></li>
+                <li><a href="">Liên hệ</a></li>
+            </ul>
         </div>
-        <div>
-            <a href="">Đăng nhập</a>
-            <a href="">Trang chủ</a>
-            <a href="">Giới thiệu</a>
-            <a href="">Liên hệ</a>
+        <div class="searchbtn">
+            <input type="text" placeholder="Tìm kiếm sản phẩm tại đây!" />
+            <button type="submit">Tìm kiếm</button>
         </div>
     </div>
 
@@ -37,22 +39,102 @@
             <h4>Danh mục sản phẩm</h4>
             <div class="menu_block_left">
                 <ul>
-                    <li class="dropdown">
+                    <li class="menu">
                         <a href="#"> Pc gaming</a>
-                        <div class="dropdown_content">
-                            <a href="#">PC gaming trung cấp</a>
-                            <a href="#">PC gaming cao cấp</a>
-                            <a href="#">PC gaming siêu cao cấp</a>
-                        </div>
+                        <ul class="sub_menu">
+                            <li><a href="#">PC gaming trung cấp</a></li>
+                            <li><a href="#">PC gaming cao cấp</a></li>
+                            <li><a href="#">PC gaming siêu cao cấp</a></li>
+                        </ul>
                     </li>
-                    <li><a href="#">Lap top</a></li>
-                    <li><a href="#">Linh kiện Pc</a></li>
-                    <li><a href="#">Màn hình</a></li>
-                    <li><a href="#">Bàn phím</a></li>
-                    <li><a href="#"> Chuột</a></li>
-                    <li><a href="#">Tai nghe</a></li>
-                    <li><a href="#">Phụ kiện</a></li>
-                    <li><a href="#">Thiệt bị mạng</a></li>
+                    <li>
+                        <a href="#">Laptop</a>
+                        <ul class="sub_menu">
+                            <li><a href="#">Laptop Gaming</a></li>
+                            <li><a href="#">Laptop văn phòng</a></li>
+                            <li><a href="#">Laptop doanh nhân</a></li>
+                            <li><a href="#">Laptop theo VGA</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">Linh kiện Pc</a>
+                        <ul class="sub_menu">
+                            <li><a href="#">Mainboard - bo mạch chủ </a></li>
+                            <li><a href="#">CPU - bộ vi xử lý</a></li>
+                            <li><a href="#">RAM - bộ nhớ trong</a></li>
+                            <li><a href="#">VGA - card màn hình</a></li>
+                            <li><a href="#">SSD - ổ cứng thể rắn</a></li>
+                            <li><a href="#">HDD - ổ cứng PC</a></li>
+                            <li><a href="#">PSU - nguồn máy tính</a></li>
+                            <li><a href="#">CASE - vỏ máy tính</a></li>
+                            <li><a href="#">Tản nhiệt, fan RGB</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">Màn hình</a>
+                        <ul class="sub_menu">
+                            <li><a href="#">Màn hình - LG </a></li>
+                            <li><a href="#">Màn hình - Accer </a></li>
+                            <li><a href="#">Màn hình - ViewSonic </a></li>
+                            <li><a href="#">Màn hình - Asus </a></li>
+                            <li><a href="#">Màn hình - HKC </a></li>
+                            <li><a href="#">Màn hình - Dell </a></li>
+                            <li><a href="#">Màn hình - Samsung </a></li>
+                            <li><a href="#">Màn hình - MSI </a></li>
+                            <li><a href="#">Màn hình - BenQ </a></li>
+                            <li><a href="#">Màn hình - Lenovo </a></li>
+                            <li><a href="#">Màn hình - Gigabyte </a></li>
+                            <li><a href="#">Màn hình - Philips </a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">Bàn phím</a>
+                        <ul class="sub_menu">
+                            <li><a href="#">Thương hiệu - Razer </a></li>
+                            <li><a href="#">Thương hiệu - Leopold </a></li>
+                            <li><a href="#">Thương hiệu - Corsair </a></li>
+                            <li><a href="#">Thương hiệu - Logitech </a></li>
+                            <li><a href="#">Thương hiệu - Akko </a></li>
+                            <li><a href="#">Thương hiệu - Dareu </a></li>
+                            <li><a href="#">Thương hiệu - Steelseries </a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#"> Chuột</a>
+                        <ul class="sub_menu">
+                            <li><a href="#">Thương hiệu - Razer </a></li>
+                            <li><a href="#">Thương hiệu - HyperX </a></li>
+                            <li><a href="#">Thương hiệu - Corsair </a></li>
+                            <li><a href="#">Thương hiệu - Logitech </a></li>
+                            <li><a href="#">Thương hiệu - Akko </a></li>
+                            <li><a href="#">Thương hiệu - Dareu </a></li>
+                            <li><a href="#">Thương hiệu - Steelseries </a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">Tai nghe Gaming</a>
+                        <ul class="sub_menu">
+                            <li><a href="#">Thương hiệu - Razer </a></li>
+                            <li><a href="#">Thương hiệu - Leopold </a></li>
+                            <li><a href="#">Thương hiệu - Corsair </a></li>
+                            <li><a href="#">Thương hiệu - Logitech </a></li>
+                            <li><a href="#">Thương hiệu - Akko </a></li>
+                            <li><a href="#">Thương hiệu - Dareu </a></li>
+                            <li><a href="#">Thương hiệu - Steelseries </a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">Phụ kiện</a>
+                        <ul class="sub_menu">
+                            <li><a href="#">Microphone </a></li>
+                            <li><a href="#">Camera </a></li>
+                            <li><a href="#">Webcam </a></li>
+                            <li><a href="#">Giá treo tai nghe </a></li>
+                            <li><a href="#">Giá đỡ chuột </a></li>
+                            <li><a href="#">Thiết bị streaming </a></li>
+                            <li><a href="#">Cáp HDMI , DP, USB-C </a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
