--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
             </div>
         </div>
 
-        <div class="">
+        <div class="content">
             <div class="left_column">
                 <h2>Danh mục sản phẩm</h2>
                 <div class="menu_block_left">
                     <ul>
-                        <li class="menu">
-                            <a href="#"> Pc gaming</a>
+                        <li>
+                            <a href="#"> Pc Gaming</a>
                             <ul class="sub_menu">
                                 <li><a href="#">PC gaming trung cấp</a></li>
                                 <li><a href="#">PC gaming cao cấp</a></li>
@@ -156,8 +156,88 @@
 
                 </div>
             </div>
+        </div>
+        <div class="product">
+            <div class="row1">
+                <div>
+                    <a href="#">
+                        <img src="image/Product/vga/Colorful iGame GeForce RTX 3080 Ultra OC 10G-V.png" alt="">
+                    </a>
+
+                </div>
+                <div>
+                    <a href="#">
+                        <img src="image/Product/vga/te-geforce-rtx-3080-vision-oc-10g.png" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a href="">
+                        <img src="image/Product/vga/Evga Geforce RTX 2080 Ti.png" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a href="#">
+                        <img src="image/Product/vga/gigabyte-aorus-radeon-rx-5700-xt-8g-5.png" alt="">
+                    </a>
+                </div>
+
+
+            </div>
+            <div class="row2">
+                <div>
+                    <a href="#">
+                        <img src="image/Product/mainboard/29748_mainboard_asus_prime_x570.png" alt="">
+                    </a>
+
+                </div>
+                <div>
+                    <a href="#">
+                        <img src="image/Product/mainboard/GIGABYTE B550I AORUS PRO AX.png" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a href="">
+                        <img src="image/Product/mainboard/rog-strix-z490-a-gaming.png" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a href="#">
+                        <img src="image/Product/mainboard/techzones-msi-h410i-pro-wifi.png" alt="">
+                    </a>
+                </div>
+
+
+            </div>
+            <div class="row3">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+
+            </div>
+            <div class="pagination">
+                <ul class="pagination_list">
+                    <li class="">
+                        <a href="#" class="pagenav">1</a>
+
+                    </li>
+                    <li>
+                        <a href="#" class="pagenav">2</a>
+                    </li>
+                    <li>
+                        <a href="#" class="pagenav">3</a>
+                    </li>
+                    <li>
+                        <a href="#" class="pagenav">4</a>
+                    </li>
+                    <li>
+                        <a href="#" class="pagenav">5</a>
+                    </li>
+                </ul>
+            </div>
 
         </div>
+
 
         <script src="script.js"></script>
 </body>
