--- a/index.html
+++ b/index.html
@@ -159,22 +159,23 @@
         </div>
         <div class="product">
             <div class="row1">
-                <div>
+                <div id="item item1">
                     <a href="#">
                         <img src="image/Product/vga/Colorful iGame GeForce RTX 3080 Ultra OC 10G-V.png" alt="">
                     </a>
+                    <div> Colorful iGame GeForce RTX 3080 Ultra OC 10G-V</div>
 
                 </div>
-                <div>
+                <div id="item item">
                     <a href="#">
                         <img src="image/Product/vga/te-geforce-rtx-3080-vision-oc-10g.png" alt="">
                     </a>
                 </div>
-                <div>
+                <div id="item item1">
                     <a href="">
                         <img src="image/Product/vga/Evga Geforce RTX 2080 Ti.png" alt="">
                     </a>
-                </div>
+                </div id="item item1">
                 <div>
                     <a href="#">
                         <img src="image/Product/vga/gigabyte-aorus-radeon-rx-5700-xt-8g-5.png" alt="">
