--- a/index.html
+++ b/index.html
@@ -210,10 +210,50 @@
 
             </div>
             <div class="row3">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+                <div>
+                    <a href="#">
+                        <img src="image/Product/keyboard/banphim_corsair_k95_rgb.png" alt="">
+                    </a>
+
+                </div>
+                <div>
+                    <a href="#">
+                        <img src="image/Product/keyboard/Bàn phím cơ Akko 3108 V2 Dragon Ball Z Limited Edition.png" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a href="">
+                        <img src="image/Product/keyboard/Bàn phím cơ Cooler Master SK630 - White.png" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a href="#">
+                        <img src="image/Product/keyboard/ek1280s_white_pink_mechanical_keyboard.png" alt="">
+                    </a>
+                </div>
+            </div>
+            <div class="row4">
+                <div>
+                    <a href="#">
+                        <img src="image/Product/mouse/chuot_corsair_hapoonpro_rgb.png" alt="">
+                    </a>
+
+                </div>
+                <div>
+                    <a href="#">
+                        <img src="image/Product/mouse/chuot_dareu_em908_pink_rgb.png" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a href="">
+                        <img src="image/Product/mouse/chuot_logitech_g402_hyperion.png" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a href="#">
+                        <img src="image/Product/mouse/chuot_logitech_gpro_wireless.png" alt="">
+                    </a>
+                </div>
 
             </div>
             <div class="pagination">
@@ -235,6 +275,55 @@
                         <a href="#" class="pagenav">5</a>
                     </li>
                 </ul>
+            </div>
+            <div class="footer_container">
+                <div class="footer_top">
+                    <div>
+                        <span>Mua hàng nhiều ưu đãi tại ZynPC</span>
+                        <input type="text" placeholder="Nhập Email để nhận ưu đãi!">
+                        <input type="button" id="btn" value="Đăng ký">
+                    </div>
+                    <div class="chinhsach">
+                        <ul>
+                            <li>Chính sách đổi/ trả</li>
+                            <li>Chính sách vận chuyển / lắp đặt</li>
+                            <li>Hướng dẫn thanh toán/ trả góp</li>
+                        </ul>
+
+                    </div>
+                </div>
+                <div class="footer_bottom">
+                    <div>
+                        <span>ZynPC store chuyên lắp đặt và phân phối linh kiện máy tính, gaming gear</span>
+                    </div>
+                    <div>
+                        <h4>Thông tin cửa hàng</h4>
+                        <div class="info store">
+                            <ul>
+                                <li>
+                                    <img src="" alt="icon adress">
+                                    <span>45 Hoàng Hoa Thám, Thành Phố Huế</span>
+
+                                </li>
+                                <li>
+                                    <img src="" alt="icon phone">
+                                    <span>0987220412</span>
+
+                                </li>
+                                <li>
+                                    <img src="" alt="icon mail">
+                                    <span>CSKH@zynpc.vn
+                                    </span>
+                                </li>
+                            </ul>
+                        </div>
+
+
+                    </div>
+                    <div>
+                        <h4>Facebook</h4>
+                    </div>
+                </div>
             </div>
 
         </div>
