--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Zyn PC Store</title>
 </head>
 
@@ -278,40 +279,46 @@
             </div>
             <div class="footer_container">
                 <div class="footer_top">
-                    <div>
-                        <span>Mua hàng nhiều ưu đãi tại ZynPC</span>
+                    <div class="footer_1">
+                        <h3>Mua hàng nhiều ưu đãi tại ZynPC</h3>
                         <input type="text" placeholder="Nhập Email để nhận ưu đãi!">
                         <input type="button" id="btn" value="Đăng ký">
                     </div>
-                    <div class="chinhsach">
+                    <div class="footer_2">
                         <ul>
-                            <li>Chính sách đổi/ trả</li>
-                            <li>Chính sách vận chuyển / lắp đặt</li>
-                            <li>Hướng dẫn thanh toán/ trả góp</li>
+                            <li>
+                                <div id="footer_2"><a href="#">Chính sách đổi/ trả</a></div>
+                            </li>
+                            <li>
+                                <div id="footer_2"><a href="#">Chính sách vận chuyển / lắp đặt</a></div>
+                            </li>
+                            <li>
+                                <div id="footer_2"><a href="#">Hướng dẫn thanh toán/ trả góp</a></div>
+                            </li>
                         </ul>
 
                     </div>
                 </div>
                 <div class="footer_bottom">
-                    <div>
-                        <span>ZynPC store chuyên lắp đặt và phân phối linh kiện máy tính, gaming gear</span>
+                    <div id="col">
+                        <span>ZynPC store lắp đặt và phân phối linh kiện máy tính, gaming gear</span>
                     </div>
-                    <div>
-                        <h4>Thông tin cửa hàng</h4>
+                    <div id="col">
+                        <h3>Thông tin cửa hàng</h3>
                         <div class="info store">
                             <ul>
                                 <li>
-                                    <img src="" alt="icon adress">
+                                    <i class="fas fa-map-marker-alt"></i>
                                     <span>45 Hoàng Hoa Thám, Thành Phố Huế</span>
 
                                 </li>
                                 <li>
-                                    <img src="" alt="icon phone">
+                                    <i class="fa fa-phone"></i>
                                     <span>0987220412</span>
 
                                 </li>
                                 <li>
-                                    <img src="" alt="icon mail">
+                                    <i class="fa fa-envelope"></i>
                                     <span>CSKH@zynpc.vn
                                     </span>
                                 </li>
@@ -320,8 +327,8 @@
 
 
                     </div>
-                    <div>
-                        <h4>Facebook</h4>
+                    <div id="col">
+                        <h3>Facebook</h3>
                     </div>
                 </div>
             </div>
