--- a/index.html
+++ b/index.html
@@ -160,100 +160,182 @@
         </div>
         <div class="product">
             <div class="row1">
-                <div id="item item1">
+                <div id="item">
                     <a href="#">
                         <img src="image/Product/vga/Colorful iGame GeForce RTX 3080 Ultra OC 10G-V.png" alt="">
                     </a>
-                    <div> Colorful iGame GeForce RTX 3080 Ultra OC 10G-V</div>
+                    <div class="txt">
+                        <h3> Colorful iGame GeForce RTX 3080 Ultra OC 10G-V</h3>
+                        <p>24,990,000₫</p>
+                        <p>Click để xem chi tiết</p>
+                    </div>
 
                 </div>
-                <div id="item item">
+                <div id="item">
                     <a href="#">
                         <img src="image/Product/vga/te-geforce-rtx-3080-vision-oc-10g.png" alt="">
                     </a>
+                    <div class="txt">
+                        <h3> GIGABYTE GeForce RTX 3080 VISION OC 10G</h3>
+                        <p>24,089,000₫</p>
+                        <p>Click để xem chi tiết</p>
+                    </div>
                 </div>
-                <div id="item item1">
+                <div id="item">
                     <a href="">
                         <img src="image/Product/vga/Evga Geforce RTX 2080 Ti.png" alt="">
                     </a>
-                </div id="item item1">
-                <div>
+                    <div class="txt">
+                        <h3> Evga Geforce RTX 2080 Ti Xc Ultra Gaming</h3>
+                        <p>25,990,000₫</p>
+                         <p>Click để xem chi tiết</p>
+                    </div>
+                </div >
+                <div id="item">
                     <a href="#">
                         <img src="image/Product/vga/gigabyte-aorus-radeon-rx-5700-xt-8g-5.png" alt="">
                     </a>
+                    <div class="txt">
+                        <h3> Gigabyte Aorus Radeon Rx 5700 Xt 8G</h3>
+                        <p>11,890,000₫</p>
+                    </div>
                 </div>
 
 
             </div>
             <div class="row2">
-                <div>
+                <div  id="item">
                     <a href="#">
                         <img src="image/Product/mainboard/29748_mainboard_asus_prime_x570.png" alt="">
                     </a>
+                    <div class="txt">
+                        <h3>ASUS PRIME X570-PRO (AMD Socket AM4)</h3>
+                        <p>5,990,000₫
+                            </p>
+                        <p>Click để xem chi tiết</p>
+                    </div>
 
-                </div>
-                <div>
+                </div >
+                <div  id="item">
                     <a href="#">
                         <img src="image/Product/mainboard/GIGABYTE B550I AORUS PRO AX.png" alt="">
                     </a>
+                    <div class="txt">
+                        <h3>GIGABYTE B550I AORUS PRO AX</h3>
+                        <p>4,750,000₫</p>
+                        <p>Click để xem chi tiết</p>
+                    </div>
                 </div>
-                <div>
+                <div  id="item"> 
                     <a href="">
                         <img src="image/Product/mainboard/rog-strix-z490-a-gaming.png" alt="">
                     </a>
+                    <div class="txt">
+                        <h3>  Mainboard ASUS ROG STRIX Z490-A GAMING</h3>
+                        <p>5,990,000 đ</p>
+                        <p>Click để xem chi tiết</p>
+                    </div>
                 </div>
-                <div>
+                <div  id="item" >
                     <a href="#">
                         <img src="image/Product/mainboard/techzones-msi-h410i-pro-wifi.png" alt="">
                     </a>
+                    <div class="txt">
+                        <h3> MSI H410I PRO WIFI</h3>
+                        <p>2.899.000 ₫</p>
+                        <p>Click để xem chi tiết</p>
+                    </div>
                 </div>
 
 
             </div>
             <div class="row3">
-                <div>
+                <div  id="item">
                     <a href="#">
                         <img src="image/Product/keyboard/banphim_corsair_k95_rgb.png" alt="">
                     </a>
+                    <div class="txt">
+                        <h3>Bàn phím Corsair K95 RGB Platinum</h3>
+                        <p>4,090,000₫
+                           </p>
+                        <p>Click để xem chi tiết</p>
+                    </div>
 
                 </div>
-                <div>
+                <div  id="item">
                     <a href="#">
                         <img src="image/Product/keyboard/Bàn phím cơ Akko 3108 V2 Dragon Ball Z Limited Edition.png" alt="">
                     </a>
+                    <div class="txt">
+                        <h3>Bàn phím cơ Akko 3108 V2 Dragon Ball Z Limited Edition</h3>
+                        <p>1,690,000đ
+                        </p>
+                        <p>Click để xem chi tiết</p>
+                    </div>
                 </div>
-                <div>
+                <div  id="item">
                     <a href="">
                         <img src="image/Product/keyboard/Bàn phím cơ Cooler Master SK630 - White.png" alt="">
                     </a>
+                    <div class="txt">
+                        <h3> Bàn phím cơ Cooler Master SK630 - White</h3>
+                        <p>3.690.000 đ</p>
+                        <p>Click để xem chi tiết</p>
+                    </div>
                 </div>
-                <div>
+                <div  id="item">
                     <a href="#">
                         <img src="image/Product/keyboard/ek1280s_white_pink_mechanical_keyboard.png" alt="">
                     </a>
+                    <div class="txt">
+                        <h3> Bàn phím cơ Gaming DAREU EK1280s PINK-WHITE 104KEY (PINK LED, Blue/ Brown/ Red D switch)</h3>
+                        <p> 799,000 ₫</p>
+                        <p>Click để xem chi tiết</p>
+                    </div>
                 </div>
             </div>
             <div class="row4">
-                <div>
-                    <a href="#">
+                <div  id="item">
+                     <a href="#">
                         <img src="image/Product/mouse/chuot_corsair_hapoonpro_rgb.png" alt="">
                     </a>
+                    <div class="txt">
+                        <h3>Chuột Corsair HARPOON PRO RGB</h3>
+                        <p>450.000₫</p>
+                        <p>Click để xem chi tiết</p>
+                    </div>
 
                 </div>
-                <div>
+                <div  id="item">
                     <a href="#">
                         <img src="image/Product/mouse/chuot_dareu_em908_pink_rgb.png" alt="">
                     </a>
+                    <div class="txt">
+                        <h3> Chuột Dareu EM908 Pink LED RGB</h3>
+                        <p>399,000₫</p>
+                        <p>Click để xem chi tiết</p>
+                    </div>
                 </div>
-                <div>
+                <div  id="item"> 
                     <a href="">
                         <img src="image/Product/mouse/chuot_logitech_g402_hyperion.png" alt="">
                     </a>
+                    <div class="txt">
+                        <h3> Chuột Logitech G402 Hyperion Fury Optical Gaming (Đen)</h3>
+                        <p>625,000₫</p>
+                        <p>Click để xem chi tiết</p>
+                    </div>
                 </div>
-                <div>
+                <div  id="item">
                     <a href="#">
                         <img src="image/Product/mouse/chuot_logitech_gpro_wireless.png" alt="">
                     </a>
+                    <div class="txt">
+                        <h3> Chuột Logitech G Pro Wireless</h3>
+                        <p>2,990,000₫
+                            </p>
+                        <p>Click để xem chi tiết</p>
+                    </div>
                 </div>
 
             </div>
